--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "issues": "https://github.com/johnitvn/yii2-ajaxcrud/issues?state=open",
         "source": "https://github.com/johnitvn/yii2-ajaxcrud"
     },
+    "minimum-stability": "dev",
     "require": {
         "yiisoft/yii2": "*",
         "yiisoft/yii2-gii": "*",
